<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/post_image"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/border1" />

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/post_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/post_desc"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>