<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PostActivity">

    <ImageButton
        android:id="@+id/selectImage"
        android:layout_width="match_parent"
        android:layout_height="343dp"
        android:adjustViewBounds="true"
        android:background="@color/white"
        android:contentDescription="@string/imageButton"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/border1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-28dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/selectImage"
        android:orientation="vertical">

        <EditText
            android:id="@+id/imageTitleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/input_border"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/imageDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/postButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/postButton"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>